# VA-Compile

./: .gitignore  BUILD_GUIDE.md  BUILD_PROGRESS.md  CLAUDE.md  README.md  VA-compile-guide.md  VA_COMPILATION_PROCESS.md  apply_additional_fixes.py  apply_fixes.py  build.bat  configure.bat  fix_link_errors.py  fix_vdl_enum_errors.py  va_toolchain.cmake
source/VABase/: CMakeLists.txt  README.md
source/VABase/external_libs/: CMakeLists.txt
source/VABase/external_libs/patches/: change_install_dir.patch  (+1 more)
source/VABase/include/: VA.h  VAAudioSignalSource.h  VABase.h  VABaseDefinitions.h  VAEvent.h  VAEventHandlerGlobalLock.h  VAException.h  VAInterface.h  VAObject.h  VAObjectRegistry.h  VASamples.h  VAStruct.h  VAVersion.h
source/VABase/src/: VABase.cpp  VAEvent.cpp  VAEventHandlerGlobalLock.cpp  VAException.cpp  VAInterface.cpp  VAObject.cpp  VAObjectRegistry.cpp  VASamples.cpp  VAStruct.cpp  VAVersion.cpp
source/VABase/tests/: CMakeLists.txt  ObjectTest.cpp  StructTest.cpp
source/VACS/: .gitignore  CMakeLists.txt  README.md
source/VACS/csharp/: VACS.csproj.proto  VACSDummy.csproj.proto  VACSDummy.csproj.user.proto  VACSTest.csproj.proto  VACSTest.csproj.user.proto
source/VACS/include/: VACSDefinitions.h  VANetCSWrapper.h
source/VACS/src/: VANetCSWrapper.cpp
source/VACS/tests/: CMakeLists.txt  VACSDummyWrapper.cpp  VACSDummyWrapper.h
source/VACore/: .gitignore  CMakeLists.txt  README.md
source/VACore/conf/: VACore.ini.proto  VASimulationART.json  VASimulationFreeField.json  VASimulationRAVEN.json  VASimulationUrban.json
source/VACore/data/: LICENSE.md
source/VACore/external_libs/: CMakeLists.txt
source/VACore/include/: CMakeLists.txt  VACore.h  VACoreDefinitions.h  VACoreFactory.h  VANetworkStreamAudioSignalSource.h  VAObjectPool.h  VAPoolObject.h  VAReferenceableObject.h  VAUncopyable.h
source/VACore/scenes/: Reset.lua  sceneBauerCircle.lua  sceneBauerFix.lua  sceneDopplerLine.lua  sceneEngine.lua  sceneEurogress.lua  sceneJazzQuartet.lua  sceneMKO.lua  sceneMachine.lua  sceneSimple.lua  sceneSines.lua  sceneTrompete.lua  trajectory1.lua  trajectory2.lua  trajectory3.lua
source/VACore/src/: CMakeLists.txt  VAAudiostreamTracker.h  VACoreConfig.cpp  VACoreConfig.h  VACoreDumper.cpp  VACoreEventHandlerRegistry.cpp  VACoreEventHandlerRegistry.h  VACoreEventManager.cpp  VACoreEventManager.h  VACoreThread.cpp  VACoreThread.h  VAGroundReflection.h  VAHardwareSetup.cpp  VAHardwareSetup.h  VALockfreeObjectPool.cpp  VALockfreeObjectPool.h  VALog.cpp  VALog.h  VAMacroMap.cpp  VAMacroMap.h  VAObjectContainer.h  VAObjectPool.cpp  VAPoolObject.cpp  VAProfiler.cpp  VAProfiler.h  VAReferenceableObject.cpp  VASceneControlCommand.cpp  VASceneControlCommand.h  VASoundSource.cpp  VASoundSource.h  VASourceTargetMetrics.cpp  VASourceTargetMetrics.h  VAStringtable.h
source/VACore/tests/: AmbisonicsReproductionTest.15DesignP120.Triangulation.ini  AmbisonicsReproductionTest.15DesignP120.ini  AmbisonicsReproductionTest.cpp  AmbisonicsReproductionTest.ini  BinauralClusteringRendererTest.VACore.ini  BinauralClusteringRendererTest.cpp  BinauralOutdoorNoiseRendererTest.VACore.ini  BinauralOutdoorNoiseRendererTest.cpp  CMakeLists.txt  CoreTest.cpp  DataHistoryModelTest.cpp  DataHistoryVsMotionModelTest.cpp  GenericPathRendererTest.cpp  HATORenderingTest.cpp  MotionModelTest.cpp  NetworkStreamAudioSignalSourceTest.cpp  ObjectContainerTest.cpp  ObjectPoolTest.cpp  OfflineSimulationVirtualDeviceTest.cpp  SHTest.cpp  SceneConfigTest.cpp  UtilsTest.cpp  VALogTest.cpp  VASetup.VRLab.Triangulation.ini  VBAPFreefieldRendererTest.cpp  VBAPFreefieldRendererTest.ini
source/VALua/: CMakeLists.txt  README.md
source/VALua/apps/: VAShell.cpp  VAShell.rc
source/VALua/generation/: VACore.interface.txt  _SourceFiles.cmake  generate_implementation.pl  template.cpp
source/VALua/include/: VALuaDefs.h  VALuaShell.h  _SourceFiles.cmake
source/VALua/res/: VAShell.xcf
source/VALua/scripts/: ConversionFuncTest.lua  DirectivitiesTest.lua  GlobalfunctionTest.lua  ListenerTest.lua  PortalTest.lua  SampleTest.lua  SignalSourceTest.lua  SoundSourceTest.lua  test1.lua  testAudiofilePlaystates.lua  testAudiofileSignalSource.lua  testDeviceInputSignalSource.lua  testDirectivity.lua  testDoppler1.lua  testKrankenwagen.lua  testPlaySound.lua  testSamplerSignalSource.lua  testSignalSources1.lua  testState.lua
source/VALua/src/: VALuaCoreObject.h  VALuaDLLMain.cpp  VALuaShell.cpp  VALuaShellImpl.cpp  VALuaShellImpl.h  _SourceFiles.cmake  luna.h
source/VAMatlab/: .gitignore  CMakeLists.txt  README.md  VAMatlab.def
source/VAMatlab/external_libs/: CMakeLists.txt  FindNatNetSDK.cmake
source/VAMatlab/matlab/: VA.m.proto  VAMatlabExecutable_build.m  VAMatlabExecutable_debug.m  VA_build.m.proto  VA_example_ppa.m  VA_generate_wrapper.m  VA_test_AmbientMixerRenderer.m  ppa_run_analysis.m  va_matlab2openGL.m  va_openGL2matlab.m
source/VAMatlab/src/: VAMatlabConnection.cpp  VAMatlabConnection.h  VAMatlabExecutable.cpp  VAMatlabFunctionMapping.h  VAMatlabHelpers.cpp  VAMatlabHelpers.h  VAMatlabTracking.cpp  VAMatlabTracking.h
source/VANet/: CMakeLists.txt  README.md
source/VANet/external_libs/: CMakeLists.txt
source/VANet/include/: VANet.h  VANetAudioStreamServer.h  VANetClient.h  VANetDefinitions.h  VANetServer.h  VANetUtils.h  VANetVersion.h
source/VANet/src/: VANetAudioStreamServer.cpp  VANetAudioStreamServerImpl.cpp  VANetAudioStreamServerImpl.h  VANetClient.cpp  VANetClientImpl.cpp  VANetClientImpl.h  VANetMessage.cpp  VANetMessage.h  VANetNetworkProtocol.cpp  VANetNetworkProtocol.h  VANetServer.cpp  VANetServerImpl.cpp  VANetServerImpl.h  VANetUtils.cpp  VANetVersion.cpp  VANetVistaCompatibility.h
source/VANet/tests/: CMakeLists.txt
source/VAPython/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  setup.py
source/VAPython/examples/: va_example_simple.py
source/VAPython/src/: vasingleton.cpp  vasingletondoc.hpp  vasingletonmethods.hpp
source/VAServer/: .gitignore  CMakeLists.txt  README.md  VAServer.cpp  VAServer.rc  run_VAServer.bat.proto  run_VAServer.sh.proto
(+455 files in other folders)
